# auntie-online

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .snyk  Dockerfile  README.md  docker-compose.yml  loki-config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: linting.yaml
src/: baseyandexgpt.py  main.py  prompt_validation.py  yandex_gpt.py  yandexgpt.py
src/bot/: bot.py
src/gpt/: base_yandex_gpt.py  db_client.py  prompt_validation.py  yandex_gpt.py
src/rag/: rag.py
