[project]
name = "chatgpt-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pyjwt[crypto]>=2.10.1",
    "pylint>=3.3.8",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.4",
    "requests>=2.32.5",
    "boto3",
    "sentence-transformers",
    "faiss-cpu",
    "PyMuPDF",
    "hf-xet>=1.1.10",
]
